Mask: Fix possible nan values in the weight interpolation

Noticed while looking into animation data being created as per
steps to reproduce bug in T76872.